--- a/handbook.html
+++ b/handbook.html
@@ -526,6 +526,247 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 </ol>
 </div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_první_kroky_v_systému">První kroky v&#160;systému</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_rozkoukáváme_se">Rozkoukáváme se</h3>
+<div class="paragraph">
+<p>Máme před sebou prostředí GNOME Shell. Klíčovým místem pro nás je už zmíněný levý horní roh (tlačítko <em>Činnosti</em>), přes který se dostaneme k&#160;vlevo umístěnému menu s&#160;oblíbenými aplikacemi. Stačí do něj najet myší (nebo stisknout levou klávesu <kbd>Super</kbd>, <kbd>Start</kbd>, <kbd>Meta</kbd>, nebo jak ji sami znáte). Jak se dostat ke všem aplikacím? V&#160;menu nalezneme zcela dole ikonu se sadou čtverců <em>Zobrazit aplikace</em>. Klikneme na ni a nyní máme aplikace přehledně vyskládané před sebou. Prostředí je velmi intuitivní. Znáte název aplikace? Nebo jen pár prvních písmen? Pak stačí začít psát (nebo použít vyhledávací pole zcela nahoře). Vyhledávání ale neprobíhá pouze mezi aplikacemi, hledá se i mezi kontakty, soubory, možnostmi nastavení a dalšími prvky.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/shell-a.png" alt="shell a" width="500">
+</div>
+<div class="title">Figure 3. Úvodní pohled na GNOME Shell</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_pojďme_o_něco_hlouběji">Pojďme o&#160;něco hlouběji</h3>
+<div class="paragraph">
+<p>Na co se dále zaměřit při běžné práci v <em>GNOME</em>? Předně si všimněte, že okna mají pouze tlačítko pro zavření. Proč je tomu tak, si vysvětlíme při popisu dalšího režimu, minimalizace v&#160;prostředí <em>GNOME</em> totiž postrádá smysl a maximalizovat okno lze tažením k&#160;horní hraně obrazovky nebo poklikáním na lištu okna. Úkolem prostředí v&#160;tomto režimu je co nejméně překážet, proto je zobrazen pouze horní panel. Na následujícím obrázku si vysvětlíme hlavní prvky tohoto režimu.</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><em>Činnosti</em>&#8201;&#8212;&#8201;jde o&#160;už výše zmíněný prvek, který slouží pro přepnutí do režimu <em>Činnosti</em>, jenž je detailněji popsán níže. Je to výchozí bod, přes který se dostaneme k&#160;většině úkonů, které chceme v&#160;systému provádět.</p>
+</li>
+<li>
+<p><em>Nabídka aplikace</em>&#8201;&#8212;&#8201;pod ikonou momentálně aktivní aplikace naleznete nabídku, která se týká aplikace jako celku (nastavení aplikace, o&#160;aplikaci apod.). Nabídky, které se týkají jednotlivých oken, se nalézají přímo v&#160;okně aplikace. Ne každá aplikace tuto nabídku má. Pokud ji nemá, naleznete pod tímto tlačítkem pouze volbu <em>Ukončit</em>.</p>
+</li>
+</ol>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/menu-aplikace.png" alt="menu aplikace" width="300">
+</div>
+<div class="title">Figure 4. Nabídka aplikace</div>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><em>Hodiny a kalendář</em>&#8201;&#8212;&#8201;pod zobrazením aktuálního dne a času naleznete kalendář a zmeškaná upozornění. Pokud využíváte jednu z&#160;aplikací, které využívají kalendářový backend <em>GNOME</em> (např. <em>Evolution</em>), zobrazí se zde i události, které jste v&#160;těchto aplikacích do kalendáře dříve uložili.</p>
+</li>
+</ol>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/kalendar.png" alt="kalendar" width="500">
+</div>
+<div class="title">Figure 5. Hodiny a kalendář</div>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/menu.png" alt="menu" width="350">
+</div>
+<div class="title">Figure 6. Nabídka uživatele</div>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><em>Nabídka uživatele</em>&#8201;&#8212;&#8201;v&#160;pravém horním rohu jsou k&#160;dispozici nejdůležitější indikátory (připojení, zvuk, baterie atd.). Po kliknutí na ně se zobrazí nabídka, v&#160;níž můžete nastavit hlasitost, úroveň jasu, připojení k&#160;internetu, bluetooth a další věci. Třetí část nabídky obsahuje vaše jméno s&#160;možnostmi odhlášení se nebo přepnutí do jiného uživatelského účtu. Zcela dole naleznete tři ikony. Ikona nalevo spouští nastavení systému, ta prostřední zamyká obrazovku a ikona napravo vám nabídne restartování nebo vypnutí systému.</p>
+</li>
+</ol>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_k_čemu_slouží_Činnosti">K&#160;čemu slouží Činnosti?</h3>
+<div class="paragraph">
+<p>Tento režim je určen pro spouštění aplikací, přepínání mezi nimi, přepínání mezi virtuálními plochami, organizaci desktopu a vyhledávání. Uprostřed obrazovky naleznete náhledy otevřených oken, které slouží k&#160;přepínání mezi aplikacemi. Vzhledem k&#160;tomu, že v <em>Činnostech</em> se poskládají do dlaždice všechna otevřená okna, nemá minimalizace oken smysl a, jak již bylo zmíněno, <em>GNOME</em> ji nezná. Na následujícím obrázku můžete vidět další důležité prvky tohoto režimu.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/shell-b.png" alt="shell b" width="500">
+</div>
+<div class="title">Figure 7. Obrazovka Činností</div>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><em>Dash</em>&#8201;&#8212;&#8201;jedná se o&#160;panel (<em>menu</em>), na kterém naleznete spuštěné a oblíbené aplikace. Odlišíte je tak, že ty spuštěné jsou výrazně podtržené. Pokud chcete aplikaci zařadit mezi oblíbené, klikněte na ni v&#160;Dashi pravým tlačítkem myši a vyberte <em>Přidat mezi oblíbené</em>.</p>
+</li>
+</ol>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/dash-b.png" alt="dash b" width="300">
+</div>
+<div class="title">Figure 8. Práce s aplikacemi v Dashi</div>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/dash-a.png" alt="dash a" width="300">
+</div>
+<div class="title">Figure 9. Zobrazení všech aplikací</div>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><em>Zobrazit aplikace</em>&#8201;&#8212;&#8201;opět již zmíněný prvek. Toto tlačítko zobrazí spouštěče aplikací. V&#160;dolní části obrazovky pak můžete přepínat mezi často používanými aplikacemi a všemi aplikacemi.</p>
+</li>
+<li>
+<p><em>Vyhledávání</em>&#8201;&#8212;&#8201;prostředí <em>GNOME</em> nabízí také velmi mocné desktopové vyhledávání. Nemusíte do vyhledávacího pole klikat, po přepnutí do režimu <em>Činnosti</em> můžete začít rovnou psát a vyhledávání se aktivuje. Jedná se o&#160;nejrychlejší způsob, jak spouštět aplikace. Kromě nich ale můžete vyhledávat také dokumenty, obrázky, virtuální stroje, aplikace k&#160;instalaci, kontakty, atd. Nebo také provádět jednoduché výpočty. Co se má v <em>Činnostech</em> vyhledávat, můžete nastavit v&#160;systémových nastaveních pod položkou <em>Hledání</em>.</p>
+</li>
+</ol>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/vyhledavani.png" alt="vyhledavani" width="400">
+</div>
+<div class="title">Figure 10. Integrované vyhledávání</div>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><em>Virtuální plochy</em>&#8201;&#8212;&#8201;na levé straně můžeme najít náhledy virtuálních ploch, kterých lze mít více, aniž by bylo nutné mít více monitorů. Slouží k&#160;organizaci oken a aplikací. <em>GNOME</em> nemá fixní počet ploch. Naopak, jejich počet je dynamický. Je jich vždycky tolik, na kolika z&#160;nich máte aktuálně umístěná okna, a jednu prázdnou navíc, která je připravená k&#160;použití. Když na ni přetáhnete okno, vytvoří se další prázdná a naopak. Přetahovat okna mezi plochami můžete přímo v&#160;náhledech, případně můžete přetáhnout náhled ze středu obrazovky do jednoho z&#160;náhledů. Přepínat mezi virtuálními plochami můžete také přímo v&#160;pracovním režimu pomocí klávesové zkratky <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>šipka ↑</kbd>/<kbd>šipka ↓</kbd>.</p>
+</li>
+<li>
+<p><em>Náhledy otevřených oken</em>&#8201;&#8212;&#8201;slouží k&#160;přehledu o&#160;tom, jaká okna máte otevřená, a také k&#160;přepínání mezi nimi. Přepnutí do vybraného okna provedete najetím myši na okno a kliknutím. Mezi okny můžete přepínat také klávesami. Stačí po přepnutí do <em>Činností</em> stisknout klávesu <kbd>šipka ↓</kbd> a potom pomocí šipek navigovat mezi okny. Přepnutí do vybraného okna provedete klávesou <kbd>Enter</kbd>.</p>
+</li>
+</ol>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_základní_nastavení">Základní nastavení</h3>
+<div class="paragraph">
+<p><em>Uživatelská a systémová nastavení</em> Fedory nalezneme tak, že stejně jako u&#160;dříve popsaného způsobu napíšeme slovo <em>nastavení</em>, nebo přes samopopisnou ikonu v&#160;menu na liště zcela vpravo nahoře. Nastavení jsou členěna do přehledných kategorií <em>Osobní</em>, <em>Hardware</em> a <em>Systém</em>), kde je možné konfigurovat vše od uživatelských účtů, přes pozadí plochy, až po tiskárny. Naprostá většina běžné konfigurace bude probíhat právě zde. Aplikace umožňuje i propojení s&#160;množstvím online účtů, tedy s&#160;cloudovými službami, ať už používáte ownCloud, Google, Facebook a další. Takto přidaný účet umožní přístup k&#160;službám a datům daného poskytovatele a ostatním aplikacím. Používáte online chat? Potřebujete kontakty? Nic už není nutné zadávat znovu.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/nastaveni.png" alt="nastaveni" width="500">
+</div>
+<div class="title">Figure 11. Uživatelská a systémová nastavení</div>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/software.png" alt="software" width="500">
+</div>
+<div class="title">Figure 12. Správa software ve Fedoře</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_instalace_nového_softwaru">Instalace nového softwaru</h3>
+<div class="paragraph">
+<p>Fedora už v&#160;základu obsahuje mnoho potřebných aplikací (webový prohlížeč <em>Mozilla&#160;Firefox</em>, kancelářský balík <em>LibreOffice</em>, multimediální přehrávač <em>Totem</em> a desítky dalších). Co když ale potřebujeme více programů? Ne všechen software může být zahrnut do výchozí instalace systému, je ale dostupný v&#160;tzv. repozitářích, z&#160;nichž lze daný program jednoduše stáhnout. Repozitář je tvořen sadou serverů a jejich zrcadel, kde jsou umístěny balíky s&#160;různými aplikacemi a knihovnami. Slyšeli jste o&#160;\uv{appstore} na různých mobilních platformách? Pak jste velice blízko, základní princip je stejný. Chcete nějaký program stáhnout z&#160;webu a nainstalovat? Zkuste se nejprve podívat, zda není k&#160;dispozici v&#160;repozitářích. Na Linuxu se tak instaluje naprostá většina aplikací. Jak tedy na to?</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><em>Grafický správce</em>&#8201;&#8212;&#8201;aplikace <em>Software</em> je přesně ten druh programu, který znáte z&#160;libovolné mobilní platformy. Je to elegantní a přehledná vstupní brána do repozitářů, kde lze dle názvu (nebo v&#160;rámci kategorie) vyhledávat celistvé aplikace a různé doplňky pro systém. Každá aplikace zde má svůj přehledný popis včetně licence a své velikosti. Stále platí: vše je opensource, vše je bezplatné. Přes nástroj <em>Software</em> můžeme aplikace samozřejmě i odinstalovat a setkáme se s&#160;ním vždy, když budeme systém (a balíky v&#160;něm) aktualizovat.</p>
+</li>
+<li>
+<p><em>Nástroj DNF</em>&#8201;&#8212;&#8201;skrze nástroj <em>Software</em> lze v&#160;repozitářích dohledat hlavně ucelené spustitelné aplikace. Není ale určen na dohledání jednotlivé (třeba vývojářské) knihovny, dokumentace nebo různých dílčích utilit. Ve Fedoře je přitom takřka dvacet tisíc balíků, zdaleka ne všechny však obsahují pouze aplikace. Pro přístup ke všem balíkům (a jejich vyhledávání, instalaci, apod.) můžeme použít nástroj <em>dnf</em> (určený pro práci v&#160;shellu, není však těžké se jej naučit užívat) nebo jeho nadstavbu <em>Yum extender (DNF)</em>, která je opět grafická a dává nám veškerý uživatelský komfort.
+\end{enumerate}</p>
+</li>
+</ol>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_kodeky_a_další_software">Kodeky a další software</h3>
+<div class="paragraph">
+<p>Co když nějaký software k&#160;dispozici v&#160;repozitářích není? I&#160;taková situace může nastat. Často se jedná o&#160;specifický kodek nebo ovladač. Takový software nemusí být nezbytně placený, může být volně dostupný, ale už ho není (z&#160;licenčních, nebo patentových důvodů) možné zahrnout do Fedory. Tady nastupují repozitáře třetích stran, které nejsou spravované ani jinak spojené s&#160;Fedorou, ale mohou být velmi užitečné. (Dodejme, že za tyto zdroje softwaru nenese Fedora Project zodpovědnost a že nemusí mít vyřešenou právní nezávadnost podle autorského a patentového práva.)</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><em>Firemní repozitáře</em>&#8201;&#8212;&#8201;korporace jako Google nebo Adobe nabízejí zdroje software obsahující jejich produkty. Jsou to různé vývojářské utility, ale i programy jako <em>Google Chrome</em>, <em>Adobe Flash plugin</em> a další. Jak jednou z&#160;jejich webu nainstalujeme balík přidávající do našeho systému repozitář, vidíme dostupný software v&#160;nástrojích stejně tak jako dříve zmíněný <em>Software</em> nebo <em>dnf</em>. Obdobným způsobem ho pak také spravujeme.</p>
+</li>
+<li>
+<p><em>Další repozitáře</em>&#8201;&#8212;&#8201;existují velké zdroje software třetích stran s&#160;množstvím balíků, ke kterým např. nemáme k&#160;dispozici zdrojové kódy nebo jsou jinak nevyhovující, ale které jsou stále užitečné. Multimediální kodeky a různé specifické ovladače pak můžeme nalézt v&#160;repozitářích jako je (asi nejznámější) <em>RPMFusion</em>. Instalace balíků pak opět probíhá analogicky.</p>
+</li>
+<li>
+<p><em>Copr repozitáře</em>&#8201;&#8212;&#8201;na rozdíl od předchozích dvou zmíněných variant jsou repozitáře Copr za všech okolností licenčně čisté. Je snadné je přidat a jsou, vedle oficiálních repozitářů, momentálně největší zdroj softwaru pro Fedoru. Může se jednat o&#160;nové verze desktopových prostředí, frameworků apod. Samozřejmě při práci s&#160;nimi je vždy nutné zjistit, co přesně daný software v&#160;systému způsobí. Naleznete je na adrese <a href="http://copr.fedoraproject.org">copr.fedoraproject.org</a>.</p>
+</li>
+</ol>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_jak_fedoru_přizpůsobit">Jak Fedoru přizpůsobit?</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_rozšíření_pro_gnome_shell">Rozšíření pro GNOME Shell</h3>
+<div class="paragraph">
+<p>GNOME Shell disponuje rozšířeními, jež jsou mocnou zbraní co do přizpůsobení systému jednotlivému uživateli. Instalují se přímo v&#160;prostředí webového prohlížeče z&#160;webu <a href="http://extensions.gnome.org">extensions.gnome.org</a>. Jedná se o&#160;stovky rozšíření, které doplňují nebo mění jednotlivé prvky uživatelského prostředí. Změny menu, ikon, panelů, indikace, zobrazení, přepínání oken a nesčetné množství dalších.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_vylaďovací_nástroj_gnome">Vylaďovací nástroj GNOME</h3>
+<div class="paragraph">
+<p>Aneb <em>GNOME Tweak Tool</em>. Nástroj zahrnutý ve Fedoře, pomocí něhož lze podrobně, až do nejmenších detailů, nastavit jemnosti, které výchozí konfigurační nástroj neobsahuje. Můžeme zde namátkou měnit znělku prostředí, přesné chování virtuálních ploch, chování při napájení, písma aplikací, klávesové zkratky a opět desítky dalších věcí. Ostatně, můžeme zde spravovat i výše zmíněná rozšíření.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_chcete_vědět_víc">Chcete vědět víc?</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_kam_se_podívat_dál">Kam se podívat dál?</h3>
+<div class="paragraph">
+<p>Naše příručka má skromné ambice, ale co když narazíte na problém, který nejste schopni rychle vyřešit? Základní pravidlo zní: problém, který řešíte, už takřka jistě řešil někdo před vámi. Kam se tedy podívat?</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="http://mojefedora.cz">mojefedora.cz</a>&#8201;&#8212;&#8201;z&#160;českých webů ve vztahu k&#160;Fedoře zásadní stránky (a univerální rozcestník). Obsahuje množství článků, tipů a dalších informací.</p>
+</li>
+<li>
+<p><a href="http://wiki.mojefedora.cz">wiki.mojefedora.cz</a>&#8201;&#8212;&#8201;příručka o&#160;Fedoře, na které mnoho lidí odvedlo obrovské množství práce. Mnoho návodů, které hledáte, budou právě zde.</p>
+</li>
+<li>
+<p><a href="http://forum.mojefedora.cz">forum.mojefedora.cz</a>&#8201;&#8212;&#8201;fórum v&#160;českém jazyce hodící se vždy, když nejste schopni problém vyřešit sami nebo když sami chcete nabídnout svou pomoc.</p>
+</li>
+<li>
+<p><a href="http://fedoraforum.org">fedoraforum.org</a>&#8201;&#8212;&#8201;fórum v&#160;anglickém jazyce s&#160;rozsáhlou uživatelskou základou a dlouhou historií řešených problémů. Nyní už byste mohli být v&#160;cíli.</p>
+</li>
+<li>
+<p><a href="http://fedoramagazine.org">fedoramagazine.org</a>&#8201;&#8212;&#8201;články o&#160;dění kolem Fedory. Nové aplikace a oznámení.</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_co_když_narazím_na_chybu">Co když narazím na chybu?</h3>
+<div class="paragraph">
+<p>Je docela možné, že se dostanete do situace, kdy narazíte na chybu zcela novou. Co pak? Fedora používá bugzillu společnosti Red Hat, která je dostupná z&#160;adresy <a href="http://bugzilla.redhat.com">bugzilla.redhat.com</a>. (Nutno podotknout, že nezbytností při hlášení chyb je angličtina, alespoň na základní úrovni.) Není to ale jediná možnost, jak chybu ohlásit. Ve Fedoře je dostupný nástroj ABRT. Budeme-li citovat klasický snímek, pak daný nástroj vystihuje spojení <em>každý přispívá podle svých možností</em> a ABRT koná přesně v&#160;tom duchu.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_další_edice_fedory">Další edice Fedory</h3>
+<div class="paragraph">
+<p>Zde se dostáváme k&#160;věcem, ve kterých se Fedora odlišuje od obecného spektra linuxových operačních systémů. Fedora doznala své podoby ve třech hlavních edicích. Už dříve popsaná je edice <em>Workstation</em>, dále pak tu máme edice <em>Server</em> a <em>Cloud</em>. Pojďme na ně. U&#160;edice <em>Server</em> lze vyzdvihnout aplikace jako Cockpit sloužící pro vzdálenou správu běžících serverů prostřednictvím webového prohlížeče nebo administraci serverových rolí přes Rolekit. U&#160;edice <em>Cloud</em> pak máme k&#160;dispozici minimalistickou verzi Fedory, která umožňuje akorát nasazení kontejnerů. A&#160;že existuje hned několik obrazů Fedory Cloud připravených pro nasazení v&#160;prostředí <em>OpenStack</em>, <em>VirtualBox</em> a dalších.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_fedora_a_spiny">Fedora a spiny</h3>
+<div class="paragraph">
+<p>Vše, co dosud padlo ve vztahu k&#160;Fedora <em>Workstation</em>, se týkalo výchozího cílení toho operačního systému, jehož desktopovým prostředím je <em>GNOME&#160;3</em> a jeho <em>GNOME Shell</em>. Co když se ale chceme rozhlédnout dále? Ve Fedoře existují tzv. spiny, čili připravené instalační obrazy se specifickým cílením. Jste zvyklí na <em>KDE Plasma</em>? Je tu <em>KDE Plasma Desktop</em>. <em>Xfce</em>? <em>LXDE</em>? Pro vše tu jsou připravené obrazy. Ale ani u&#160;Fedora spinů se nemusíme zastavit. V&#160;dnešní době je velmi aktuální procesorová architektura ARM (nejčastější mobilní platforma, platforma pro různé vývojové desky à la Banana Pi, BeagleBone, nebo v&#160;případě Fedora Remixu i Raspberry Pi). Stejně jako některé další linuxové operační systémy i Fedora má pro tuto architekturu připravené řešení ve formě jak serverové verze, tak minimálního instalačního obrazu pro obecné použití.</p>
+</div>
 <div style="page-break-after: always;"></div>
 <div class="paragraph">
 <p><em>Začínáme s Fedorou</em></p>
@@ -556,7 +797,7 @@ Maria Leonova</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-11-21 21:50:58 CET
+Last updated 2015-11-21 23:49:20 CET
 </div>
 </div>
 </body>
